Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/AWorldSettings.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_PROP_AWorldSettings_WorldToMeters_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AWorldSettings_WorldToMeters_SET(IntPtr Ptr, float Value);
		
		#region DLLInmport
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern IntPtr E_NewObject_AWorldSettings(IntPtr Parent, string Name);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AWorldSettings_ClearAllBookmarks(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AWorldSettings_CompactBookmarks(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_AWorldSettings_FixupDeltaSeconds(IntPtr self, float deltaSeconds, float realDeltaSeconds);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_AWorldSettings_GetEffectiveTimeDilation(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_AWorldSettings_GetGravityZ(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_AWorldSettings_GetMaxNumberOfBookmarks(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AWorldSettings_IsNavigationSystemEnabled(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AWorldSettings_NotifyBeginPlay(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AWorldSettings_NotifyMatchStarted(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AWorldSettings_OnRep_WorldGravityZ(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_AWorldSettings_SetTimeDilation(IntPtr self, float newTimeDilation);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>if set to false AI system will not get created. Use it to disable all AI-related activity on a map </para>
		/// </summary>
		public byte bEnableAISystem
		{
			get => E_PROP_AWorldSettings_bEnableAISystem_GET(NativePointer);
			set => E_PROP_AWorldSettings_bEnableAISystem_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Enables tools for composing a tiled world. </para>
		/// <para>Level has to be saved and all sub-levels removed before enabling this option. </para>
		/// </summary>
		public byte bEnableWorldComposition
		{
			get => E_PROP_AWorldSettings_bEnableWorldComposition_GET(NativePointer);
			set => E_PROP_AWorldSettings_bEnableWorldComposition_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>World origin will shift to a camera position when camera goes far away from current origin </para>
		/// </summary>
		public byte bEnableWorldOriginRebasing
		{
			get => E_PROP_AWorldSettings_bEnableWorldOriginRebasing_GET(NativePointer);
			set => E_PROP_AWorldSettings_bEnableWorldOriginRebasing_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to force lightmaps and other precomputed lighting to not be created even when the engine thinks they are needed. </para>
		/// <para>This is useful for improving iteration in levels with fully dynamic lighting and shadowing. </para>
		/// <para>Note that any lighting and shadowing interactions that are usually precomputed will be lost if this is enabled. </para>
		/// </summary>
		public byte bForceNoPrecomputedLighting
		{
			get => E_PROP_AWorldSettings_bForceNoPrecomputedLighting_GET(NativePointer);
			set => E_PROP_AWorldSettings_bForceNoPrecomputedLighting_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If set to true we will use GlobalGravityZ instead of project setting DefaultGravityZ </para>
		/// </summary>
		public byte OverrideWorldGravity
		{
			get => E_PROP_AWorldSettings_bGlobalGravitySet_GET(NativePointer);
			set => E_PROP_AWorldSettings_bGlobalGravitySet_SET(NativePointer, value);
		}

		public byte bHighPriorityLoading
		{
			get => E_PROP_AWorldSettings_bHighPriorityLoading_GET(NativePointer);
			set => E_PROP_AWorldSettings_bHighPriorityLoading_SET(NativePointer, value);
		}

		public byte bHighPriorityLoadingLocal
		{
			get => E_PROP_AWorldSettings_bHighPriorityLoadingLocal_GET(NativePointer);
			set => E_PROP_AWorldSettings_bHighPriorityLoadingLocal_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Causes the BSP build to generate as few sections as possible. </para>
		/// <para>This is useful when you need to reduce draw calls but can reduce texture streaming efficiency and effective lightmap resolution. </para>
		/// <para>Note - changes require a rebuild to propagate.  Also, be sure to select all surfaces and make sure they all have the same flags to minimize section count. </para>
		/// </summary>
		public byte bMinimizeBSPSections
		{
			get => E_PROP_AWorldSettings_bMinimizeBSPSections_GET(NativePointer);
			set => E_PROP_AWorldSettings_bMinimizeBSPSections_SET(NativePointer, value);
		}

		public byte bOverrideDefaultBroadphaseSettings
		{
			get => E_PROP_AWorldSettings_bOverrideDefaultBroadphaseSettings_GET(NativePointer);
			set => E_PROP_AWorldSettings_bOverrideDefaultBroadphaseSettings_SET(NativePointer, value);
		}

		public FBroadphaseSettings BroadphaseSettings
		{
			get => E_PROP_AWorldSettings_BroadphaseSettings_GET(NativePointer);
			set => E_PROP_AWorldSettings_BroadphaseSettings_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Enables client-side streaming volumes instead of server-side. </para>
		/// <para>Expected usage scenario: server has all streaming levels always loaded, clients independently stream levels in/out based on streaming volumes. </para>
		/// </summary>
		public byte bUseClientSideLevelStreamingVolumes
		{
			get => E_PROP_AWorldSettings_bUseClientSideLevelStreamingVolumes_GET(NativePointer);
			set => E_PROP_AWorldSettings_bUseClientSideLevelStreamingVolumes_SET(NativePointer, value);
		}

		public byte bWorldGravitySet
		{
			get => E_PROP_AWorldSettings_bWorldGravitySet_GET(NativePointer);
			set => E_PROP_AWorldSettings_bWorldGravitySet_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Default color scale for the level </para>
		/// </summary>
		public FVector DefaultColorScale
		{
			get => E_PROP_AWorldSettings_DefaultColorScale_GET(NativePointer);
			set => E_PROP_AWorldSettings_DefaultColorScale_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Max occlusion distance used by mesh distance fields, overridden if there is a movable skylight. </para>
		/// </summary>
		public float DefaultMaxDistanceFieldOcclusionDistance
		{
			get => E_PROP_AWorldSettings_DefaultMaxDistanceFieldOcclusionDistance_GET(NativePointer);
			set => E_PROP_AWorldSettings_DefaultMaxDistanceFieldOcclusionDistance_SET(NativePointer, value);
		}

		public float DemoPlayTimeDilation
		{
			get => E_PROP_AWorldSettings_DemoPlayTimeDilation_GET(NativePointer);
			set => E_PROP_AWorldSettings_DemoPlayTimeDilation_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls the intensity of self-shadowing from capsule indirect shadows. </para>
		/// <para>These types of shadows use approximate occluder representations, so reducing self-shadowing intensity can hide those artifacts. </para>
		/// </summary>
		public float DynamicIndirectShadowsSelfShadowingIntensity
		{
			get => E_PROP_AWorldSettings_DynamicIndirectShadowsSelfShadowingIntensity_GET(NativePointer);
			set => E_PROP_AWorldSettings_DynamicIndirectShadowsSelfShadowingIntensity_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Distance from the camera that the global distance field should cover. </para>
		/// </summary>
		public float GlobalDistanceFieldViewDistance
		{
			get => E_PROP_AWorldSettings_GlobalDistanceFieldViewDistance_GET(NativePointer);
			set => E_PROP_AWorldSettings_GlobalDistanceFieldViewDistance_SET(NativePointer, value);
		}

		public float GlobalGravityZ
		{
			get => E_PROP_AWorldSettings_GlobalGravityZ_GET(NativePointer);
			set => E_PROP_AWorldSettings_GlobalGravityZ_SET(NativePointer, value);
		}

		public float KillZ
		{
			get => E_PROP_AWorldSettings_KillZ_GET(NativePointer);
			set => E_PROP_AWorldSettings_KillZ_SET(NativePointer, value);
		}

		public float MatineeTimeDilation
		{
			get => E_PROP_AWorldSettings_MatineeTimeDilation_GET(NativePointer);
			set => E_PROP_AWorldSettings_MatineeTimeDilation_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Highest acceptable global time dilation. </para>
		/// </summary>
		public float MaxGlobalTimeDilation
		{
			get => E_PROP_AWorldSettings_MaxGlobalTimeDilation_GET(NativePointer);
			set => E_PROP_AWorldSettings_MaxGlobalTimeDilation_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Largest possible frametime, not considering dilation. Equiv to 1/SlowestFPS. </para>
		/// </summary>
		public float MaxUndilatedFrameTime
		{
			get => E_PROP_AWorldSettings_MaxUndilatedFrameTime_GET(NativePointer);
			set => E_PROP_AWorldSettings_MaxUndilatedFrameTime_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Lowest acceptable global time dilation. </para>
		/// </summary>
		public float MinGlobalTimeDilation
		{
			get => E_PROP_AWorldSettings_MinGlobalTimeDilation_GET(NativePointer);
			set => E_PROP_AWorldSettings_MinGlobalTimeDilation_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Smallest possible frametime, not considering dilation. Equiv to 1/FastestFPS. </para>
		/// </summary>
		public float MinUndilatedFrameTime
		{
			get => E_PROP_AWorldSettings_MinUndilatedFrameTime_GET(NativePointer);
			set => E_PROP_AWorldSettings_MinUndilatedFrameTime_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Distance from the player after which content will be rendered in mono if monoscopic far field rendering is activated </para>
		/// </summary>
		public float MonoCullingDistance
		{
			get => E_PROP_AWorldSettings_MonoCullingDistance_GET(NativePointer);
			set => E_PROP_AWorldSettings_MonoCullingDistance_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Maximum size of textures for packed light and shadow maps </para>
		/// </summary>
		public int PackedLightAndShadowMapTextureSize
		{
			get => E_PROP_AWorldSettings_PackedLightAndShadowMapTextureSize_GET(NativePointer);
			set => E_PROP_AWorldSettings_PackedLightAndShadowMapTextureSize_SET(NativePointer, value);
		}

		public APlayerState Pauser
		{
			get => E_PROP_AWorldSettings_Pauser_GET(NativePointer);
			set => E_PROP_AWorldSettings_Pauser_SET(NativePointer, value);
		}

		public float TimeDilation
		{
			get => E_PROP_AWorldSettings_TimeDilation_GET(NativePointer);
			set => E_PROP_AWorldSettings_TimeDilation_SET(NativePointer, value);
		}

		public float WorldGravityZ
		{
			get => E_PROP_AWorldSettings_WorldGravityZ_GET(NativePointer);
			set => E_PROP_AWorldSettings_WorldGravityZ_SET(NativePointer, value);
		}

